modify wardrobe service, clothes service and testcode